# informa

./: Cargo.toml
src/: ctx.rs  data.rs  lib.rs
src/sfnt/: mod.rs  types.rs
src/sfnt/tables/: mod.rs
src/sfnt/tables/cmap/: forma4-segmentation-inspector.html  format12.rs  format4.rs  mod.rs
src/util/: byte.rs  mod.rs  slice.rs
